--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^12.19.2",
     "@types/react": "^16.9.54",
     "@types/react-dom": "^16.9.9",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
