--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.2",
-    "@types/react": "^16.9.54",
-    "@types/react-dom": "^16.9.9",
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -45,7 +41,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.19.2",
+    "@types/react": "^16.9.54",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-dom": "^16.9.9",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
